// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atom/Button Default 1`] = `
<button
  className="a-header__button"
  onClick={[Function]}
  type="button"
>
  Iniciar sesión
</button>
`;

exports[`Storyshots Atom/SearchBar Default 1`] = `
<form
  className="a-header__SearchBar"
  onSubmit={[Function]}
>
  <input
    placeholder="Buscar aquí producto"
    type="text"
  />
  <button
    type="submit"
  >
    <img
      alt="SearchIcon"
      src={[Function]}
    />
  </button>
</form>
`;

exports[`Storyshots Atom/ShoppingCartButton Default 1`] = `
<div
  className="a-header__shoppingCartButton"
>
  <button
    onClick={[Function]}
    type="button"
  >
    <img
      alt="ShoppingCartIcon"
      src={[Function]}
    />
  </button>
</div>
`;

exports[`Storyshots Atom/ShoppingCartButton Notify 1`] = `
<div
  className="a-header__shoppingCartButton"
>
  <button
    onClick={[Function]}
    type="button"
  >
    <img
      alt="ShoppingCartIcon"
      src={[Function]}
    />
  </button>
  <div
    className="burble"
  >
    <span>
      5
    </span>
  </div>
</div>
`;
